fix(deploy): install prisma via npm in Docker runner for release command
MongoDB Atlas IP-whitelists Fly.io but not GitHub Actions runners,
so db push must run as a Fly.io release command. Install prisma with
npm in the runner stage to get all CLI dependencies resolved cleanly.

--- a/fly.toml
+++ b/fly.toml
@@ -1,6 +1,9 @@
 app = "klaserie-camps"
 primary_region = "jnb"
 
+[deploy]
+  release_command = "sh scripts/deploy-release.sh"
+
 [env]
   PORT = "8080"
 
