feat: add offline-first mode with local persistence and background sync #2
- PWA manifest, service worker (Serwist), and home screen icons
- CacheFirst strategies for species images, map tiles, Strava photos
- NetworkFirst with 3s timeout for tRPC API responses
- IndexedDB persister for React Query data (7-day TTL, offlineFirst mode)
- Offline mutation queue with FIFO replay and temp ID rewriting
- Sync manager drains queue automatically on reconnect
- Offline-aware mutations for drives, sightings, and checklist toggles
- GPS buffer persisted to IndexedDB (survives app crashes mid-drive)
- Local drive store for fully offline game drives with temp UUIDs
- Species image pre-caching (~243 images) on Checklist page load
- Offline status indicator in nav bar (Offline/Syncing/Synced states)
- Platform support documentation with iOS caveats and guide onboarding

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noUncheckedIndexedAccess": true,
 
     /* Bundled projects */
-    "lib": ["dom", "dom.iterable", "ES2022"],
+    "lib": ["dom", "dom.iterable", "ES2022", "WebWorker"],
     "noEmit": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
@@ -35,5 +35,5 @@
     "**/*.tsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules", "generated"]
+  "exclude": ["node_modules", "generated", "public/sw.js", "public/swe-worker-*.js"]
 }
