--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ yarn-error.log*
 
 # legacy npm lockfile (project uses pnpm)
 package-lock.json
+
+# serwist service worker (generated at build)
+public/sw.js
+public/sw.js.map
+public/swe-worker-*.js
