--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
     "@prisma/client": "^6.6.0",
+    "@serwist/next": "^9.5.5",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "bcryptjs": "^3.0.3",
+    "idb-keyval": "^6.2.2",
     "leaflet": "^1.9.4",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
@@ -31,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "server-only": "^0.0.1",
+    "serwist": "^9.5.5",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
   },
