--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-leaflet": "^5.0.0",
     "server-only": "^0.0.1",
     "serwist": "^9.5.5",
+    "sharp": "^0.34.5",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
   },
