--- a/fly.toml
+++ b/fly.toml
@@ -11,3 +11,8 @@ primary_region = "jnb"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[[vm]]
+  memory = "512mb"
+  cpu_kind = "shared"
+  cpus = 1
