--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
+    "db:populate-images": "tsx prisma/populate-images.ts",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
     "dev": "next dev --turbo",
