--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@aws-sdk/client-s3": "^3.990.0",
+    "@aws-sdk/s3-request-presigner": "^3.990.0",
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "6.19.2",
     "@serwist/next": "^9.5.5",
     "@t3-oss/env-nextjs": "^0.12.0",
