feat: extract EXIF date/location from photos for backdated sightings
Parse EXIF GPS coordinates and DateTimeOriginal from captured/pasted
photos using exifreader. Use photo location instead of current GPS
position and allow backdating sightings via optional createdAt field.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "bcryptjs": "^3.0.3",
+    "exifreader": "^4.36.1",
     "idb-keyval": "^6.2.2",
     "leaflet": "^1.9.4",
     "next": "^15.2.3",
