--- a/package.json
+++ b/package.json
@@ -14,12 +14,20 @@
     "postinstall": "prisma generate",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "cap:sync": "cap sync",
+    "cap:ios": "cap open ios",
+    "cap:android": "cap open android"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
     "@aws-sdk/client-s3": "^3.990.0",
     "@aws-sdk/s3-request-presigner": "^3.990.0",
+    "@capacitor/app": "^8.0.1",
+    "@capacitor/camera": "^8.0.1",
+    "@capacitor/core": "^8.1.0",
+    "@capacitor/push-notifications": "^8.0.1",
+    "@capgo/background-geolocation": "^8.0.21",
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "6.19.2",
     "@serwist/next": "^9.5.5",
@@ -44,6 +52,9 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/ios": "^8.1.0",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.21",
